anthos/istio-mesh-sample/anthos-repo/namespaces/pinit-app/namespace.yaml
#namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pinit-app
  labels:
    istio-injection: enabled
