anthos/istio-mesh-sample/anthos-repo/namespaces/pinit-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinit-front
  namespace: pinit-app
  labels:
    app: pinit
    service: pinit-front
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: pinit
