anthos/istio-mesh-sample/anthos-repo/namespaces/pinit-app/pinit-gateway.yaml
#pinit-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pinit-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - pinit.com
