anthos/istio-mesh-sample/anthos-repo/namespaces/pinit-app/pinit-destination-rules.yaml
#pinit-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pinit-front
spec:
  host: pinit-front.pinit-app.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: pinit-front-remote
  annotations:
    configmanagement.gke.io/cluster-selector: prod-selector
spec:
  host: pinit-front.pinit-app.global
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
